--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,18 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.interface {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+button {
+  width: 50px;
+  height: 50px;
+}
+
 .wCard {
   border: 1px solid black;
+  height: 500px;
+  width: 300px;
 }
