--- a/src/App.css
+++ b/src/App.css
@@ -7,17 +7,69 @@ body {
 }
 
 .interface {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  display: flex;
+  align-items: center;
+  justify-items: center;
 }
 
-button {
+.addButton {
   width: 50px;
   height: 50px;
+  border: none;
+  border-radius: 50%;
+  background-color: grey;
+  font-size: 20px;
+  color: white;
+}
+.delButton {
+  width: 25px;
+  height: 25px;
+  border: 2px solid black;
+  background-color: rgb(214, 72, 72);
+  color: white;
+  font-weight: bold;
+  border-radius: 50%;
+  position: absolute;
+  top: -12.5px;
+  right: -12.5px;
+  z-index: 9999;
 }
 
 .wCard {
   border: 1px solid black;
   height: 500px;
   width: 300px;
+  margin: 20px;
+  position: relative;
+  padding: 10px;
+  display: grid;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
+}
+
+/* Weather Card */
+
+
+/* Entry Card */ 
+.entryCard {
+  font-size: 20px;
+  text-align: center;
+}
+.entryCard h3 {
+  padding: 5px;
+  font-family: Arial, Helvetica, sans-serif;
+  /* ! Why would I have to insert this? */
+}
+.entryCard input[type=text] {
+  padding: 5px;
+  font-size: 20px;
+}
+.entryCard input[type=submit] {
+  margin: 5px;
+  padding:5px 15px; 
+  background:#ccc;
+  cursor:pointer;
+  border-radius: 5px; 
+  font-size: 20px;
 }
