--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,14 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.background {
+  width: 100%;
+  height: 100%;
+  z-index: -9999px;
+  background-color: rgb(101, 139, 182);
+  position: absolute;
+}
+
 .interface {
   display: flex;
   align-items: center;
@@ -17,9 +25,10 @@ body {
   height: 50px;
   border: none;
   border-radius: 50%;
-  background-color: grey;
+  background-color: rgb(71, 71, 71);
   font-size: 20px;
   color: white;
+  z-index: 999999;
 }
 .delButton {
   width: 25px;
@@ -46,6 +55,7 @@ body {
   align-items: center;
   justify-content: center;
   border-radius: 10px;
+  background-color: white;
 }
 
 /* Weather Card */
