Fonts and Styling updated

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,13 @@
-body {
-  padding: 0;
-  margin: 0;
+/* fonts */
+/* Open Sans Regular */
+@font-face {
+  font-family: 'OpenSansRegular';
+  src: url('fonts/OpenSans-Regular.ttf') format('truetype'),
+       url('fonts/opensans-regular-webfont.woff') format('woff');
 }
-body {
-  font-family: Arial, Helvetica, sans-serif;
+
+* {
+  font-family: 'OpenSansRegular', Arial, Helvetica, sans-serif;
 }
 
 .background {
@@ -23,9 +27,9 @@ body {
 
 .interface {
   display: flex;
-  flex-wrap: wrap;
   align-items: center;
-  justify-items: center;
+  justify-content: center;
+  height: 100vh;
 }
 
 .addButton {
@@ -46,7 +50,7 @@ body {
 .delButton {
   width: 25px;
   height: 25px;
-  border: 2px solid black;
+  border: none;
   background-color: rgb(214, 72, 72);
   color: white;
   font-weight: bold;
@@ -61,7 +65,7 @@ body {
 }
 
 .wCard {
-  height: 500px;
+  height: 600px;
   width: 300px;
   margin: 20px;
   position: relative;
@@ -69,12 +73,29 @@ body {
   display: grid;
   align-items: center;
   justify-content: center;
-  border-radius: 10px;
-  background-color: rgba(255, 255, 255, 0.88);
+  border-radius: 15px;
+  background-color: rgba(236, 236, 236, 0.719);
+  font-family: 'OpenSansRegular', Arial, Helvetica, sans-serif;
+
 }
 
 /* Weather Card */
-
+.weatherCard {
+  text-align: center;
+}
+.weatherCard h1 {
+  font-weight: bold;
+  font-size: 50px;
+  padding: 2.5px;
+}
+.weatherCard h2 {
+  font-size: 22px;
+  padding: 2.5px;
+}
+.weatherCard h3 {
+  font-size: 15px;
+  padding: 2.5px;
+}
 
 /* Entry Card */ 
 .entryCard {
@@ -82,24 +103,26 @@ body {
   text-align: center;
 }
 .entryCard h3 {
-  padding: 5px;
-  font-family: Arial, Helvetica, sans-serif;
-  /* ! Why would I have to insert this? */
+  padding: 10px;
+  font-size: 27px;
 }
 .entryCard input[type=text] {
-  padding: 5px;
+  padding: 10px;
   font-size: 20px;
+  border: none;
+  border-radius: 10px;
 }
 .entryCard input[type=text]:focus {
   outline: none;
 }
 
 .entryCard input[type=submit] {
-  margin: 5px;
-  padding:5px 15px; 
-  background:#ccc;
+  margin: 10px;
+  padding: 5px 15px; 
+  background:rgb(51, 51, 51);
+  color: white;
   cursor:pointer;
-  border-radius: 5px; 
+  border-radius: 10px; 
   font-size: 20px;
 }
 .entryCard input[type=submit]:focus {
