--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@
   z-index: -9999px;
   position: absolute;
   overflow: hidden;
+  background: linear-gradient(42deg, rgba(102,43,142,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
 }
 .background video {
   width: auto;
